css update to ensure environment independent line wrapping (#63)
Line wrapping has to be handled slightly different whether `vimtyping`
environment is enclosed in floating environment or used at its own.
When inside floating environment tag than inheritance of white space
and display attributes is a bit different compared to plain use. This
is reflected by the updated `vimtyping-default.css`

Added
```
\setupexport[cssfile=\vimtypingcssfile]
```
to `tests/vim/43-export-float.tex` file to check proper line
wrapping and figuring the differences described above.

--- a/vimtyping-default.css
+++ b/vimtyping-default.css
@@ -36,6 +36,13 @@ inlinevimtyping verbatimline,
     white-space:pre-wrap;
 }
 
+floatcontent vimtyping verbatimline,
+.floatcontent .vimtyping .verbatimline
+{
+    display:block;
+    white-space:pre-wrap;
+}
+
 vimtyping syntaxgroup,
 inlinevimtyping syntaxgroup,
 .vimtyping .syntaxgroup,
